# agent_juliette

./: .env.example  README.md  main.py  render.yaml
agent_juliette/: .gitignore  README.md  credentials.json  main.py  pyproject.toml  render.yaml
agent_juliette/src/: __init__.py  models.py
agent_juliette/src/agent/: orchestrator.py  pdf_service.py
agent_juliette/src/integrations/: __init__.py  gmail_service.py  openai_service.py  qdrant_service.py  tally.py  tally_service.py
agent_juliette/tests/: test_lead.json  test_payload.json  test_tally.py  test_tally_payload.json
scripts/: init_gmail_auth.py
src/: config.py  models.py
src/agent/: __init__.py  devis_generator.py  devis_schemas.py  email_generator.py  orchestrator.py  pdf_service.py  prompts.py
src/integrations/: gmail_service.py  openai_service.py  perplexity_service.py  qdrant_service.py
tests/: devis_ameliore.json  last_devis.json  test_devis_generator.py  test_lead_alice.json  test_lead_bob.json  test_lead_doctolib.json  test_lead_sophie.json  test_webhook_async.json  test_webhook_full.json  test_webhook_sophiemartin.json
